# caretta-sync

./: .gitignore  .gitmodules  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: error.rs  lib.rs  server.rs  tests.rs
backend/src/invitation_token/: mod.rs
backend/src/models/: error.rs  mod.rs
backend/src/proto/: device.rs  invitation_token.rs  mod.rs
backend/src/service_handler/: device.rs  invitation_token.rs  mod.rs
bevy/: Cargo.toml
bevy/src/: global.rs  lib.rs  peer.rs
cli/: Cargo.toml
cli/src/: lib.rs  serve.rs  utils.rs
cli/src/cli/: logs.rs  mod.rs  serve.rs
cli/src/config/: check.rs  list.rs  mod.rs
cli/src/device/: info.rs  invite.rs  join.rs  list.rs  mod.rs  ping.rs  remove.rs
cli/src/option/: config.rs  device_identifier.rs  duration.rs  mod.rs
cli/src/token/: approve.rs  reject.rs  request.rs
core/: Cargo.toml  build.rs
core/macros/src/: lib.rs
core/macros/tests/: derive_mergeable.rs  derive_runnable.rs
core/proto/: caretta.proto  caretta_sync.authorization_request.proto  caretta_sync.authorized_node.proto  caretta_sync.common.proto  caretta_sync.peer_info.proto  caretta_sync.proto  caretta_sync.remote_node.proto  iroh.proto  tripod_id.proto
core/proto/caretta_sync/: authorization_request.proto  authorized_node.proto  common.proto  peer_info.proto  remote_node.proto  service.proto
core/src/: error.rs  lib.rs  server.rs  tests.rs
core/src/args/: config.rs  default.rs  mod.rs
core/src/config/: error.rs  iroh.rs  log.rs  mod.rs  p2p.rs  parsed.rs  rpc.rs  storage.rs
core/src/context/: backend.rs  client.rs  mod.rs  server.rs  service.rs
core/src/data/: mod.rs  syncable.rs
core/src/example/: config.rs  migrator.rs  mod.rs
core/src/global/: config.rs  database_connection.rs  iroh_endpoint.rs  local_database_connection.rs  mod.rs
core/src/invitation_token/: error.rs  mod.rs
core/src/ipc/: error.rs  mod.rs
core/src/message/: node.rs
core/src/p2p/: mod.rs
core/src/parsed_config/: error.rs  log.rs  mod.rs  p2p.rs  rpc.rs  storage.rs
core/src/proto/: authorization_request.rs  authorized_node.rs  cached_address.rs  cached_peer.rs  common.rs  doc.rs  error.rs  generated.rs  iroh.rs  mod.rs  net.rs  remote_node.rs  server.rs
core/src/rpc/: mod.rs  server.rs
core/src/serde/: byte_array.rs  byte_array_option.rs  byte_vec.rs  byte_vec_option.rs  date_time.rs  date_time_local.rs  date_time_option.rs  mod.rs
core/src/token/: mod.rs
core/src/types/: base32_bytes.rs  mod.rs
core/src/util/: mergeable.rs  mod.rs
core/src/utils/: async_convert.rs  emptiable.rs  mergeable.rs  mod.rs  runnable.rs  runnable_command.rs
desktop/: Cargo.toml
desktop/proto/: caretta.proto
desktop/src/: global.rs  lib.rs  utils.rs
desktop/src/args/: config.rs  device_identifier.rs  duration.rs  mod.rs  server.rs  token_identifier.rs
desktop/src/cli/: logs.rs  mod.rs  serve.rs  server.rs
desktop/src/config/: mod.rs  rpc.rs
desktop/src/parsed_config/: error.rs  log.rs  mod.rs  p2p.rs  rpc.rs  storage.rs
desktop/src/parser/: server.rs
desktop/src/rpc/: mod.rs
desktop/src/subcommand/: mod.rs
desktop/src/types/: mod.rs
egui/: Cargo.toml
examples/core/: Cargo.toml
examples/core/src/: global.rs  gui.rs  lib.rs  mcp.rs  server.rs
examples/demo/core/: Cargo.toml
examples/demo/desktop/: Cargo.toml  Dioxus.toml
examples/desktop/: Cargo.toml
examples/desktop/src/: cli.rs  gui.rs  main.rs
examples/mobile/: Cargo.toml
examples/mobile/ios/: Makefile  build_rust_deps.sh
examples/mobile/src/: lib.rs  main.rs
examples/simple-list/: Cargo.toml
examples/simple-list/src/: main.rs
id/: Cargo.toml  README.md
id/src/: builder.rs  chunk.rs  config.rs  double.rs  error.rs  lib.rs  rusqlite.rs  single.rs  triple.rs  utils.rs
iroh-proto/: Cargo.toml  build.rs
iroh-proto/examples/: client.rs  server.rs
iroh-proto/proto/: iroh.proto
iroh-proto/src/: error.rs  server.rs
iroh-proto/src/proto/: direct_addr_info_message.rs  last_control_message.rs  mod.rs  remote_info_message.rs  remote_info_request.rs  source_message.rs
lazy-supplements/: Cargo.toml
lazy-supplements-core/: Cargo.toml
lazy-supplements-core/src/: error.rs  ipc.rs  lib.rs  message.rs  migration.rs  tests.rs
lazy-supplements-core/src/cache/: mod.rs
lazy-supplements-core/src/config/: core.rs  error.rs  mod.rs  node.rs  p2p.rs  storage.rs
lazy-supplements-core/src/data/: mod.rs  syncable.rs
lazy-supplements-core/src/global/: config.rs  database_connection.rs  mod.rs  peers.rs  storage_config.rs
lazy-supplements-core/src/message/: mod.rs  node.rs
lazy-supplements-core/src/p2p/: error.rs  mod.rs
lazy-supplements-core/src/utils/: emptiable.rs  mergeable.rs  mod.rs  runnable.rs
lazy-supplements-desktop/: Cargo.toml  build.rs
lazy-supplements-desktop/proto/: lazy_supplements.proto
lazy-supplements-desktop/src/: error.rs  global.rs  lib.rs  main.rs  utils.rs
lazy-supplements-desktop/src/cli/: config.rs  logs.rs  mod.rs  node.rs  server.rs
lazy-supplements-desktop/src/config/: desktop.rs  mod.rs  rpc.rs  unix.rs  windows.rs
lazy-supplements-macros/: Cargo.toml
lazy-supplements-macros/src/: derive.rs  lib.rs
lazy-supplements-macros/tests/: derive_emptiable.rs  derive_mergeable.rs  derive_runnable.rs  derive_syncable.rs
lazy-supplements/src/: error.rs  lib.rs  main.rs
lazy-supplements/src/cli/: config.rs  connect.rs  console.rs  init.rs  mod.rs  node.rs  server.rs
lazy-supplements/src/config/: mod.rs  node.rs  server.rs
lazy-supplements/src/entity/: mod.rs  node.rs  record_deletion.rs
lazy-supplements/src/global/: database.rs  mod.rs
lazy-supplements/src/migration/: mod.rs
macros/: Cargo.toml
macros/src/: derive.rs  lib.rs
macros/tests/: derive_emptiable.rs  derive_mergeable.rs  derive_runnable.rs  derive_syncable.rs
service/: Cargo.toml
service/src/: config.rs  error.rs  lib.rs  server.rs  tests.rs
tripod-id/: Cargo.toml  build.rs
tripod-id/proto/: tripod_id.proto
tripod-id/src/: double.rs  error.rs  lib.rs  prost.rs  rusqlite.rs  single.rs  triple.rs  utils.rs
ui/: Cargo.toml
(+410 files in other folders)
