[package]
name = "caretta-framework"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
exclude = ["/.github", "/.gitignore", "/.gitmodules", "/.vscode"]

[features]
default = []
server = [
    "dep:caretta-framework-migration",
    "dep:gethostname",
    "dep:iroh",
    "dep:iroh-blobs",
    "dep:iroh-docs",
    "dep:iroh-gossip",
    "dep:rand",
    "dep:sea-orm",
    "dep:sea-orm-migration",
    "caretta-id/sea-orm",
    "rmcp/server",
]
client = [ "rmcp/client" ]
desktop = ["dep:clap", "dep:dirs", "dep:whoami", ]
cli = ["desktop"]
gui = []
mobile = ["client", "server", "gui"]
desktop-client = [
    "client",
    "desktop",
    "rmcp/transport-streamable-http-client-reqwest"
]
desktop-cli = ["desktop-client", "cli"]
desktop-gui = ["desktop-client", "gui"]
desktop-server = [
    "server",
    "desktop",
    "dep:axum",
    "rmcp/transport-streamable-http-server",
    "rmcp/transport-streamable-http-server-session"
]

macros = ["dep:caretta-framework-macros"]
devtools = []
server-devtools = [
    "devtools",
    "dep:iroh-ping",
]
client-devtools = [
    "devtools",
]

[dependencies]
async-trait.workspace = true
axum = { version = "0.8.7", optional = true }
base32 = "0.5.1"
blake3 = "1.8.2"
caretta-id = { version = "0.11.0-rc.2", features = [ "schemars", "serde"] }
caretta-framework-macros = {workspace = true, optional = true}
caretta-framework-migration = { workspace = true, optional = true }
chrono.workspace = true
ciborium = "0.2.2"
clap = { workspace = true,  optional = true }
dirs = { version = "6.0.0", optional = true }
ed25519-dalek = "3.0.0-pre"
gethostname = { version = "1.1.0", optional = true }
iroh = { workspace = true,  optional = true }
iroh-blobs = {version = "0.97.0", optional = true}
iroh-docs = {version = "0.95.0", optional = true }
iroh-gossip = {version = "0.95.0", optional = true}
iroh-ping = { version = "0.7.0", optional = true }
iroh-tickets = "0.2.0"
rand = { version = "0.9.2", optional = true }
rmcp.workspace = true
schemars = "1.1.0"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono" ], optional = true }
sea-orm-migration = { version = "2.0.0-rc", features = [ "sqlx-sqlite", "runtime-tokio-rustls" ], optional = true }
serde = "1.0.228"
serde_json.workspace = true
thiserror = "2.0.17"
tokio.workspace = true
tokio-stream = "0.1.17"
tokio-util = "0.7.17"
toml = "0.9.8"
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1.18.1", features = ["v7"] }
whoami = { version = "1.6.1", optional = true }


[dev-dependencies]
jsonschema = "0.37.4"
tempfile.workspace = true

[workspace]
members = [ ".", "macros", "examples/mobile" , "migration", "examples/desktop", "examples/core", "examples/migration" ]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.0.3"
description = "A local-first application framework for lazy person"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fluo10/caretta-framework" 

[workspace.dependencies]
async-trait = "0.1.89"
caretta-framework = {version = "0.0.3", path = "." }
caretta-framework-macros = { version = "0.0.3", path = "macros" }
caretta-framework-migration = {version = "0.0.3", path = "migration"}
chrono = { version = "0.4.41", features = [ "serde" ]}
clap = { version = "4.5.53", features = ["derive", "env"] }
iroh = { version = "0.95.1", features = ["discovery-local-network", "discovery-pkarr-dht"] }
rmcp = {version = "0.11.0", default-features = false, features = ["base64", "macros", "server"]}
sea-orm-migration = { version = "2.0.0-rc", features = [ "runtime-tokio-rustls", "sqlx-postgres" ] }
serde_json = "1.0.145"
tempfile = "3.20.0"
tokio = { version = "1.45.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v7"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
