[package]
name = "caretta-sync-backend"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
mobile = []
server = ["caretta-sync-core/server"]

[dependencies]
async-trait.workspace = true
axum = "0.8.6"
caretta-sync-core = { workspace=true, features = ["backend"] }
chrono.workspace = true
clap.workspace = true
http = "1.3.1"
iroh.workspace = true
iroh-ping = "0.6.0"
mtid.workspace = true
rand.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tower-layer = "0.3.3"
tower-service = "0.3.3"
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true