[package]
name = "caretta-sync-bevy"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bevy.workspace = true
caretta-sync-core.workspace = true
futures.workspace = true
tokio.workspace = true
tonic.workspace = true