[package]
name = "caretta-sync-core"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
desktop = ["dep:clap", "dep:serde"]
test = ["dep:tempfile", ]
backend = ["dep:iroh-ping"]
server = ["backend", "desktop"]
mobile = ["backend"]
client = ["desktop"]

[dependencies]
chrono.workspace = true
clap = {workspace = true, optional = true}
dirs = "6.0.0"
futures.workspace = true
iroh.workspace = true
iroh-ping = { workspace = true, optional = true }
mtid.workspace = true
prost.workspace = true
prost-types.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde = { workspace = true, optional = true }
sysinfo = "0.37.0"
tempfile = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
toml = "0.9.8"
tonic.workspace = true
tonic-prost = "0.14.0"
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
url.workspace = true
whoami = "1.6.1"
rand.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true

[target.'cfg(target_os="android")'.dependencies]
jni = "0.21.1"
ndk = "0.9.0"

[target.'cfg(target_os="ios")'.dependencies]
objc2 = "0.6.2"
objc2-foundation = "0.3.1"
objc2-app-kit = "0.3.1"

[dev-dependencies]
tempfile = "3.20.0"

[build-dependencies]
tonic-prost-build.workspace = true
