[package]
name = "caretta-sync-core"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
desktop = ["dep:clap"]
test = ["dep:tempfile", ]
service = ["dep:iroh-ping", "dep:redb"]
server = ["service", "desktop"]
mobile = ["service"]
client = ["desktop"]

[dependencies]
base32.workspace = true
caretta-id.workspace = true
chrono.workspace = true
ciborium.workspace = true
clap = {workspace = true, optional = true}
dirs.workspace = true
futures.workspace = true
iroh.workspace = true
iroh-ping = { workspace = true, optional = true }
irpc.workspace = true
redb = { workspace = true, optional = true }
serde.workspace = true
sysinfo = "0.37.0"
tempfile = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
url.workspace = true
whoami.workspace = true
rand.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
quinn = { package = "iroh-quinn", version = "0.14.0" }
quinn-udp = "0.5.14"
n0-future = "0.3.1"

[target.'cfg(target_os="android")'.dependencies]
jni = "0.21.1"
ndk = "0.9.0"

[target.'cfg(target_os="ios")'.dependencies]
objc2 = "0.6.2"
objc2-foundation = "0.3.1"
objc2-app-kit = "0.3.1"

[dev-dependencies]
tempfile = "3.20.0"
