[package]
name = "caretta-desktop"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
test = ["caretta-core/test"]

[dependencies]
ciborium.workspace = true
clap.workspace = true
dirs = "6.0.0"
caretta-core = { workspace = true, features = ["desktop"] }
libp2p.workspace = true
sea-orm.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true

uuid.workspace = true

[dev-dependencies]
caretta-core = {workspace = true, features = ["test"]}

[build-dependencies]
tonic-prost-build = "0.14.0"
