[package]
name = "caretta-sync-desktop"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
cli = ["client"]
gui = ["client"]
client = ["caretta-sync-core/client" ]
server = ["caretta-sync-core/server", "dep:caretta-sync-service", "dep:iroh"]

[dependencies]
caretta-id.workspace = true
caretta-sync-core = { workspace = true, features = [ "desktop" ] }
caretta-sync-service = { workspace = true, features = ["server"], optional = true }
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
iroh = { workspace = true, optional = true }
irpc.workspace = true
redb.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml = "0.9.8"
tracing.workspace = true
url = { workspace = true, features = ["serde"]}
whoami.workspace = true