[package]
name = "caretta-id"
edition.workspace = true
version = "0.1.0-alpha"
description.workspace = true
license.workspace = true
repository.workspace = true

[features]
default=[]
rusqlite = ["dep:rusqlite"]
serde = ["dep:serde"]

[dependencies]
rand.workspace = true
rusqlite = {workspace = true, optional = true}
serde = {workspace = true, optional = true}
thiserror.workspace = true


