[package]
name = "iroh-proto"
edition.workspace = true
version = "0.1.0-alpha"
description = "protobuf definition and tonic server implemention for fetch iroh server infomation"
license.workspace = true
repository.workspace = true

[dependencies]
ed25519-dalek = { version = "2.2.0", features = ["signature"] }
futures.workspace = true
iroh.workspace = true
prost.workspace = true
prost-types.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
thiserror.workspace = true

[dev-dependencies]
clap.workspace = true
url.workspace = true
tokio.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
