[package]
name = "lazy-supplements-core"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
test = ["dep:tempfile"]

[dependencies]
base64 = "0.22.1"
chrono = "0.4.41"
chrono-tz = "0.10.3"
futures = "0.3.31"
libp2p.workspace = true
sea-orm = { version = "1.1.11", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-chrono", "with-uuid"] } 
sea-orm-migration.workspace = true
serde.workspace = true
tempfile = { version = "3.20.0", optional = true }
thiserror.workspace = true
tokio.workspace = true
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v7"] }

[dev-dependencies]
tempfile = "3.20.0"
