[package]
name = "lazy-supplements-desktop"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
test = ["lazy-supplements-core/test"]

[dependencies]
ciborium.workspace = true
clap.workspace = true
dirs = "6.0.0"
lazy-supplements-core = { workspace = true, features = ["desktop"] }
libp2p.workspace = true
prost = "0.14.1"
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic = "0.14.0"
uuid.workspace = true

[dev-dependencies]
lazy-supplements-core = {workspace = true, features = ["test"]}

[build-dependencies]
tonic-prost-build = "0.14.0"
