[package]
name = "lazy-supplements"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.38", features = ["derive"] }
libp2p.workspace = true
sea-orm = "1.1.11"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["macros", "rt"] }
toml = "0.8.22"
