[package]
name = "lazy-supplements"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22.1"
chrono = "0.4.41"
chrono-tz = "0.10.3"
clap = { version = "4.5.38", features = ["derive"] }
libp2p.workspace = true
sea-orm = { version = "1.1.11", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-chrono", "with-uuid"] } 
sea-orm-migration.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["macros", "rt"] }
toml = "0.8.22"
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
lazy-supplements-migration.workspace = true
