[package]
name = "caretta-sync-macros"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }

[dev-dependencies]
chrono.workspace = true
caretta-sync-core.workspace = true
sea-orm.workspace = true
tokio.workspace = true
uuid.workspace = true
