[package]
name = "caretta-sync-service"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = "0.8.6"
caretta-sync-core.workspace=true
chrono.workspace = true
clap.workspace = true
http = "1.3.1"
iroh.workspace = true
iroh-ping = "0.6.0"
mtid.workspace = true
rand.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
tokio.workspace = true
tonic.workspace = true
tower-layer = "0.3.3"
tower-service = "0.3.3"
