[package]
name = "caretta-sync-service"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
mobile = []
server = ["caretta-sync-core/server"]

[dependencies]
async-trait.workspace = true
caretta-id.workspace = true
caretta-sync-core = { workspace=true, features = ["service"] }
chrono.workspace = true
ciborium.workspace = true
clap.workspace = true
iroh.workspace = true
iroh-ping.workspace = true
irpc.workspace = true
n0-future.workspace = true
rand.workspace = true
redb.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
