[package]
name = "tripod-id"
edition = "2024"
version = "0.1.0-alpha"
description = "A local-first application framework for lazy person"
license = "MIT OR Apache-2.0"
repository = "https://forgejo.fireturlte.net/lazy-supplements" 

[features]
default=[]
prost = ["dep:prost", "dep:prost-build"]
rusqlite = ["dep:rusqlite"]
sea-orm = ["dep:sea-orm"]
serde = ["dep:serde"]

[dependencies]
prost = { version = "0.14.1", optional = true }
rand = "0.8.5"
rusqlite = {version = "0.37.0", optional = true, default-features = false}
sea-orm = {version = "1.1.16", optional = true, default-features = false}
serde = {version = "1.0.219", optional = true}
thiserror="2.0.12"


[build-dependencies]
prost-build = {version = "0.14.1", optional = true}

[dev-dependencies]
serde_test = "1.0.177"
