[package]
name = "caretta-sync-ui"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
desktop = [ "dep:serde" ]

[dependencies]
base32.workspace = true
caretta-sync-core.workspace = true
serde = { workspace = true, optional = true }
thiserror.workspace = true
