[package]
name = "caretta-framework-example-core"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
server = ["caretta-framework/server", "dep:caretta-framework-example-migration"]

[dependencies]
caretta-framework.workspace = true
caretta-framework-example-migration = {path = "../migration", optional = true}
rmcp.workspace = true
serde_json.workspace = true