[package]
name = "caretta-framework-example-core"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
server = ["caretta-framework/server", "caretta-framework/server-devtools", "dep:caretta-framework-example-migration"]

[dependencies]
caretta-framework = { workspace = true, features = ["devtools"] } 
caretta-framework-example-migration = {path = "../migration", optional = true}
rmcp.workspace = true
serde_json.workspace = true