[package]
name = "caretta-framework-example-desktop"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
cli = ["caretta-framework/desktop-cli"]
gui = ["caretta-framework/desktop-gui"]
server = ["caretta-framework/desktop-server", "caretta-framework-example-core/server"]

[[bin]]
name = "cli"
path = "src/bin/cli.rs"
required-features = ["cli"]

[[bin]]
name = "gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = ["server"]

[dependencies]
caretta-framework = {workspace = true, features = ["desktop"]}
caretta-framework-example-core = { path = "../core" }
clap.workspace = true
rmcp.workspace = true