[package]
name = "caretta-sync-example-mobile"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "caretta_sync_example"
path = "src/main.rs"

[lib]
name = "caretta_sync_example"
crate-type = ["lib", "cdylib"]

[dependencies]
caretta-sync.path = "../.."
tokio.workspace = true
