[package]
name = "caretta-framework-example-mobile"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "caretta_framework_example"
path = "src/main.rs"

[lib]
name = "caretta_framework_example"
crate-type = ["lib", "cdylib"]

[dependencies]
caretta-framework.path = "../.."
tokio.workspace = true
