[package]
name = "simple-list"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
lazy-supplements.workspace = true
lazy-supplements-migration.workspace = true
sea-orm = "1.1.11"
sea-orm-migration.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
tokio = "1.45.1"

[dev-dependencies]
lazy-supplements = { workspace = true, features = [ "test" ] }