[package]
name = "caretta-sync-demo-desktop"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
caretta-sync = { path = "../../..", features = ["desktop", "test"] }
caretta-sync-demo-core.path = "../core"
libp2p.workspace = true
tokio.workspace = true

